minikube/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      imagePullSecrets:
        - name: yc-registry-secret
      containers:
        - name: client
          image: cr.yandex/crpiegiuj22g2courr8t/client:d8994714eb5bad24cb99e5856f2654ea891c851d
          ports:
            - containerPort: 8080
