minikube/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: yc-registry-secret
      containers:
        - name: server
          image: cr.yandex/crpiegiuj22g2courr8t/server:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          command: ["./main"]
          args: ["--db-tcp"]
