minikube/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort 
  selector:
    app: server
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
