minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 8080

          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client
                port:
                  number: 80
